bin_data_macros/tests/ui/missing-encode-temporary.stderr
error: temporary field requires an `encode` attribute
 --> tests/ui/missing-encode-temporary.rs:6:13
  |
6 |         let temporary: u32,
  |             ^^^^^^^^^
